[recipes] Fix vertical gap when display tag set as columns.

--- a/apps/recipes/static/recipes.css
+++ b/apps/recipes/static/recipes.css
@@ -129,7 +129,6 @@
 
 #tagset LI {
     white-space: nowrap;
-    margin-bottom: 1em;
     padding-bottom: 1em;
 }
 
